[package]
name = "litellm-python-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "litellm_python_bridge"
crate-type = ["cdylib"]

[dependencies]
litellm-core.workspace = true
litellm-ai-gateway = { workspace = true, default-features = false }
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json.workspace = true
