[package]
name = "litellm-router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
litellm-core.workspace = true
litellm-providers.workspace = true
serde.workspace = true
rand.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
