[project]
name = "mock-server"
version = "0.1.0"
description = "Mock LLM server for testing LiteLLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "slowapi",
    "python-dotenv>=0.2.0",
    "python-multipart",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
