[package]
name = "litellm_fast_path"
version = "0.1.0"
edition = "2021"

[lib]
name = "litellm_fast_path"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
